--- a/src/styles/docs/toc/toc.css
+++ b/src/styles/docs/toc/toc.css
@@ -106,7 +106,7 @@
     position: sticky;
     top: 3.5rem;
     width: 19rem;
-    max-height: calc(100svh - 4rem);
+    max-height: calc(100svh - 3.5rem);
     overflow-y: scroll;
     z-index: 9;
     margin-right: 1.272rem;
